# hello_idc

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix  oidc.toml.example  shell.nix
.github/workflows/: pull_request.yml  push_main.yml
src/: app_init.rs  auth.rs  main.rs
