[package]
name = "hello_idc"
version = "0.1.3"
edition = "2021"
description = "Hello World with OIDC auth"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
clap = { version = "4.5.2", features = ["derive", "env"]}
maud = { version = "0.26.0", features = ["axum"] }
once_cell = "1.19.0"
openidconnect = "3.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
service_conventions = { version = "0.0.4", features = ["tracing", "oidc"]}
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tower-cookies = { version = "0.10.0", features = ["signed", "private"]}
tower-http = { version = "0.5.2", features = ["tracing", "trace"] }
tracing = "0.1.40"
url = "2.5.0"
