[package]
name = "hello_idc"
version = "0.3.4"
edition = "2021"
description = "Hello World with OIDC auth"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive", "env"]}
maud = { version = "0.26.0", features = ["axum"] }
once_cell = "1.19.0"
openidconnect = "4.0.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
service_conventions = { version = "0.0.24", features = ["tracing", "oidc"]}
#service_conventions = { git = "https://github.com/philipcristiano/rust_service_conventions.git", branch = "groups", features = ["tracing", "oidc"]}
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
tower-cookies = { version = "0.11.0", features = ["signed", "private"]}
tower-http = { version = "0.6.0", features = ["tracing", "trace"] }
tracing = "0.1.40"
url = "2.5.0"
